--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -112,7 +112,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     display: flex;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(25, 0, 255, 0.231);
     width: fit-content;
     padding-left: 10px;
     padding-right: 10px;
@@ -128,10 +128,10 @@ body{
 }
 
 .btn1:hover {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(38, 30, 254);
     color: white;
     border: 2px solid rgb(0, 0, 0);
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .home__button__container {
