--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -1,54 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 /* =========================== Main CSS Code =============================== */
-
-body {
-    background-image: url(../../static/imgs/Bground.png);
-    font-family: 'Poppins', sans-serif;
-}
-
-
-.contact__container {
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.home__title {
-    font-family: 'Poppins', sans-serif;
-    display: inline;
-    color: rgb(0, 0, 0);
-    font-size: 30px;
-}
-
-.home__title :hover{
-    width: fit-content;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 20px;
-}
-
-.logo {
-  display: flex;
-  justify-content: center;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top:60px;
-  margin-bottom: 50px;
-} 
-
-.home__links {
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    background-color: rgba(25, 0, 255, 0.231);
-    width: fit-content;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 20px;
-    margin-top: 10px;
-}
-
 .about__content {
     margin-left: auto;
     margin-right: auto;
@@ -68,12 +20,19 @@ body {
     padding-right: 20px;
     margin-left: 20px;
     border-radius: 20px;
+    color: rgb(0, 0, 0);
 }
 
 .btn1:hover {
     background-color: rgb(38, 30, 254);
     color: white;
     border: 2px solid rgb(0, 0, 0);
+}
+
+
+body {
+    background-image: url(../../static/imgs/Bground.png);
+    font-family: 'Poppins', sans-serif;
 }
 
 .chatroom__container {
@@ -89,16 +48,83 @@ body {
     margin-bottom: 10px;
 }
 
+.create__chatroom__label:hover {
+    text-decoration: underline;
+}
+
+.chat-create {
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(73, 43, 226, 0.825);
+    width: fit-content;
+    margin-top: 50px;
+    padding: 20px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
 .chatroom__btn {
     color: rgb(13, 0, 255);
     text-decoration: none;
 }
-
-.join__chatroom__btn {
-    background-color: white;
+.contact__container {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(169, 169, 169, 0.606);
+    padding: 20px;
     border: 2px solid black;
     border-radius: 10px;
+}
 
+.contact__container:hover {
+  background-color: rgba(0, 0, 0, 0.095);
+}
+
+#contact {
+    margin-left: 50px;
+    margin-top: 10px;
+    border: 2px solid rgba(0, 0, 255, 0.334);
+    padding: 5px;
+    background-color: white;
+    border-radius: 5px;
+}
+
+#name {
+    border: 2px solid rgba(0, 0, 255, 0.334);
+    border-radius: 5px;
+}
+
+#Email {
+    border: 2px solid rgba(0, 0, 255, 0.334);
+    margin-left: 5px;
+    border-radius: 5px;   
+}
+
+.contact__btn {
+    background-color: blue;
+    color: white;
+    margin-left: 100px;
+    border-radius: 10px;
+    border: 2px solid black;
+    padding: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.contact__btn:hover {
+    background-color: rgb(0, 205, 0, 5);
+    color: black;
+    font-style: italic;
+}
+
+.delete { 
+    color: red;
+    background-color: white;
+    border-radius: 10px;
+    padding: 2px;
+    border: 2px solid black;
 }
 
 .edit {
@@ -109,12 +135,63 @@ body {
     padding: 2px;
 }
 
-.delete { 
-    color: red;
+.home__title {
+    font-family: 'Poppins', sans-serif;
+    display: inline;
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+}
+
+.home__title :hover{
+    width: fit-content;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 20px;
+}
+.home__button__container {
+    padding: 5px;
+}
+.home__links {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    background-color: rgba(25, 0, 255, 0.231);
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 20px;
+    margin-top: 10px;
+}
+
+.join__chatroom__btn {
     background-color: white;
-    border-radius: 10px;
-    padding: 2px;
     border: 2px solid black;
+    border-radius: 10px;
+}
+
+.joined__chatroom__title {
+    font-size: 30px;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top:60px;
+  margin-bottom: 50px;
+  background-image: url(../../static/imgs/f2f.png);
+  background-position: center;
+  background-size:cover;
+  width: 400px;
+  height: 200px;
+
+} 
+
+.bw-logo{
+    background-image: url(../imgs/f2f-black.png);
+    width: 20px;
+    height: 20px;
 }
 
 .profile-img {
@@ -169,58 +246,8 @@ body {
     
 }
 
-
-.home__button__container {
-    padding: 5px;
-}
-
-.btn1 {
-    color: rgb(0, 0, 0);
-}
-
-
-.logo {
-    background-image: url(../../static/imgs/f2f.png);
-    background-position: center;
-    background-size:cover;
-    width: 400px;
-    height: 200px;
-} 
-
-.bw-logo{
-    background-image: url(../imgs/f2f-black.png);
-    width: 20px;
-    height: 20px;
-}
-
-
-.chat-create {
-    color: white;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgba(73, 43, 226, 0.825);
-    width: fit-content;
-    margin-top: 50px;
-    padding: 20px;
-    border: 2px solid black;
-    border-radius: 10px;
-}
-
-.joined__chatroom__title {
-    font-size: 30px;
-}
-
-/* .chat-create:hover {
-    text-decoration: underline;
-    
-} */
-
 .rooms__container {
     background-color: rgb(0, 0, 0);
-}
-
-.create__chatroom__label:hover {
-    text-decoration: underline;
 }
 
 .submit__chatroom {
@@ -265,17 +292,40 @@ body {
     to { border: 2px solid black;}
 }
 
-
 @keyframes welcome {
     from {color: transparent;}
     to {background-color: rgb(38, 30, 254)}
 }
 
-/* .logo{
-    animation-name: logo;
-    animation-duration: 5s;
-} */
+@keyframes contact {
+    from { background-color: rgba(0, 0, 0, 0.616);}
+    to { background-color: rgba(169, 169, 169, 0.606);}
+}
 
+@keyframes contact_field {
+    from { background-color: rgba(0, 0, 0, 0.34);}
+    to { background-color: rgb(255, 255, 255);}
+}
+
+.contact__container {
+    animation-name: contact;
+    animation-duration: 5s;
+}
+
+#contact {
+    animation-name: contact_field;
+    animation-duration: 2s;
+}
+
+#name {
+    animation-name: contact_field;
+    animation-duration: 5s;
+}
+
+#Email {
+    animation-name: contact_field;
+    animation-duration: 5s; 
+}
 
 .profile {
     text-align: center;
