--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Face2Face</title>
+    <link rel="icon" href="../../static/imgs/icon.png">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     {% comment %} <link rel='stylesheet' type='text/css' media='screen' href="{% static 'styles/main.css' %}"> {% endcomment %}
     <link rel='stylesheet' type='text/css' media='screen' href="{% static '/styles/homepage.css' %}">
@@ -61,6 +62,10 @@
     {% block content %}
     
     {% endblock content %}
+
+    <div className="footer__copyright">
+      <small>&copy; FACE2FACE</small>
+    </div>
 </body>
 <!-- <script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.8.0.js' %}"></script> -->
 
