--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -61,7 +61,7 @@ body {
     text-decoration: underline;
 }
 
-.chat-create {
+/* .chat-create {
     color: white;
     margin-left: auto;
     margin-right: auto;
@@ -71,7 +71,7 @@ body {
     padding: 20px;
     border: 2px solid black;
     border-radius: 10px;
-}
+} */
 
 .chatroom__btn {
     color: rgb(13, 0, 255);
@@ -312,6 +312,7 @@ box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
     overflow-y: scroll;
     scrollbar-color: black;
     border-radius: 10px;
+    margin-right:30% ;
     
 }
 
