--- a/main_app/templates/main_app/message_form.html
+++ b/main_app/templates/main_app/message_form.html
@@ -12,7 +12,7 @@
 
       .container {
         border: 2px solid #dedede;
-        background-color: #f1f1f1;
+        background-color: transparent;
         border-radius: 5px;
         padding: 10px;
         margin: 10px 0;
@@ -140,8 +140,8 @@
 
         div {
           border-radius: 5px;
-          background-color: #f2f2f2;
-          padding: 20px;
+          background-color: transparent;
+          
         }
         
       </style>
